# email-management-tool

./: # Executive Summary.md  .claude-session  .coveragerc  .deepsource.toml  .env  .env.example  .gitignore  .pre-commit-config.yaml  .snap.env.example  .stylelintrc.json  2025-10-14-caveat-the-messages-below-were-generated-by-the-u.txt  2025-10-16-this-session-is-being-continued-from-a-previous-co.txt  2025-10-18-caveat-the-messages-below-were-generated-by-the-u.txt  2025-10-24-caveat-the-messages-below-were-generated-by-the-u.txt  2025-10-30-this-session-is-being-continued-from-a-previous-co.txt  2025-10-31-this-session-is-being-continued-from-a-previous-co.txt  =3.6.1  AGENTS.md  CHANGELOG.md  CLAUDE-CODEX-WORKFLOW.md  CLAUDE.md  CLAUDE_FLOW_HANDOFF.md  CLAUDE_MD_UPDATE_SUMMARY.md  CLEANUP_REPORT_2025-10-30.md  COMPREHENSIVE_TEST_REPORT.md  ChatGPT-CSS optimization analysis.md  Context.md  Develop a cutting-edge, visually immersi.md  EMAIL_SYSTEM_STATUS.md  Email-Management-Tool.code-workspace  FINAL_REPORT_GPT5_FIXES.md  FINAL_VALIDATION_REPORT.md  FOR_CHATGPT_VERIFICATION.md  FRESH CLAUDE_ DASHBOARD REDESIGN MISSION BRIEF_CON perplexity.md  GEMINI.md  GPT-Pro-report-backup-vs-stitch.md  HONEST_TEST_REPORT.md  HOW_TO_LAUNCH.md  INTEGRATION_COMPLETE.md  LINK_STYLING_FIXES.md  (+134 more)
.codex/: config.json
.devcontainer/: devcontainer.json
.history/: .gitignore_20251012005137  .gitignore_20251014033416  .gitignore_20251014033418  .gitignore_20251014033422  .gitignore_20251014033453  .gitignore_20251014033502  .gitignore_20251014033505  .gitignore_20251014033507  .gitignore_20251014035553  styling-and-duplicate-routes-fix_20251018190716.md  styling-and-duplicate-routes-fix_20251018190742.md  styling-and-duplicate-routes-fix_20251018191812.md  styling-and-duplicate-routes-fix_20251018191822.md  styling-and-duplicate-routes-fix_20251018191832.md  styling-and-duplicate-routes-fix_20251018192505.md  styling-and-duplicate-routes-fix_20251018192535.md  styling-and-duplicate-routes-fix_20251018193102.md  styling-and-duplicate-routes-fix_20251018193108.md  styling-and-duplicate-routes-fix_20251018194906.md
.kilocode/: mcp.json
.playwright-mcp/: add-account-fixed  compose-page-fixed  dashboard-final-fixed  test-dashboard-loaded  test-suite-after-fixes  test-suite-final-fixed  test-suite-working
.serena/: project.yml
.superdesign/: BUG_MANIFEST.md  CSS_ARCHITECTURE_AUDIT.md  PORTING_GUIDE.md
.taskmaster/: TASK_PROGRESS.md  config.json  state.json
app/: __init__.py  extensions.py
archive/: CLEANUP_2025-10-10.md  README.md
config/: config.py
docs/: API_REFERENCE.md  CSS_ISSUES_BASELINE_2025-01-27.md  CSS_PHASE2A_METRICS.md  CSS_PHASE2B_BATCH1_PROOF.md  CSS_PHASE2B_BATCH1_SUMMARY.md  CSS_PHASE2_SUMMARY.md  CSS_REFACTORING_PROGRESS.md  CSS_SPACING_ANALYSIS.md  DEVELOPMENT.md  FAQ.md  FIXING_AUTH_ISSUES.md  (+12 more)
(+466 files in other folders)
